[gd_scene load_steps=21 format=3 uid="uid://fbo17vad37yd"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_6530m"]
[ext_resource type="Texture2D" uid="uid://byovpskoom72t" path="res://textures/Cards/Weapon Card.png" id="3_hq1db"]
[ext_resource type="Texture2D" uid="uid://c64t2osc5pmph" path="res://textures/red_cross.png" id="3_wi15m"]
[ext_resource type="Texture2D" uid="uid://bmcbioke0eq1d" path="res://models/kenney_weapon-pack/Sprites/Render/ammo_pistol.png" id="4_2jihu"]
[ext_resource type="Texture2D" uid="uid://bocyd1gqe83bk" path="res://textures/Cards/Movement Card.png" id="4_8jywo"]
[ext_resource type="Texture2D" uid="uid://xf7puc6val2q" path="res://textures/crosshair.png" id="5_5fb7s"]
[ext_resource type="Texture2D" uid="uid://b2ul53miupkfg" path="res://textures/Cards/Bullet Card.png" id="5_h5c5b"]
[ext_resource type="Texture2D" uid="uid://b7csi31px5nkp" path="res://textures/Cards/Weapon Card - HOVERED.png" id="5_kssd4"]
[ext_resource type="FontFile" uid="uid://cok1iqlg5b4gl" path="res://fonts/Free-Dredd-Display-Font/dredd.otf" id="5_rnbhv"]
[ext_resource type="Script" path="res://scripts/PowerUpScreen.gd" id="6_u78d8"]
[ext_resource type="Texture2D" uid="uid://c44noweusviv" path="res://textures/Cards/Movement Card - HOVERED.png" id="7_ine2k"]
[ext_resource type="Texture2D" uid="uid://dxfasu86x42j1" path="res://textures/Cards/Bullet Card - HOVERED.png" id="9_l005a"]
[ext_resource type="Script" path="res://scripts/MultiplayerSpawner.gd" id="13_dwqsj"]

[sub_resource type="LabelSettings" id="LabelSettings_drage"]
font_size = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdgqb"]
bg_color = Color(0.935247, 0.244172, 0.161613, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixby1"]
bg_color = Color(0.701961, 0.984314, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_tdql7"]
font = ExtResource("5_rnbhv")
font_size = 70
font_color = Color(0.701961, 0.984314, 0, 1)
shadow_offset = Vector2(2.08165e-12, 2.08165e-12)

[sub_resource type="LabelSettings" id="LabelSettings_xdykr"]
font = ExtResource("5_rnbhv")
font_size = 70
font_color = Color(0.701961, 0.984314, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ob3lp"]
font = ExtResource("5_rnbhv")
font_size = 70
font_color = Color(0.701961, 0.984314, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qy4m0"]
line_spacing = 2.08165e-12
font = ExtResource("5_rnbhv")
font_size = 80
font_color = Color(0.368627, 0.603922, 0.309804, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_6530m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 827.0
offset_top = 434.0
offset_right = -827.0
offset_bottom = -434.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FPS GAME"
label_settings = SubResource("LabelSettings_drage")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
placeholder_text = "Enter Address to Join"
alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CrossHair" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
pivot_offset = Vector2(960, 540)
texture = ExtResource("5_5fb7s")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -122.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Health" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 5

[node name="HealthIcon" type="TextureRect" parent="CanvasLayer/HUD/MarginContainer/Health"]
modulate = Color(0.701961, 0.984314, 0, 1)
self_modulate = Color(0.701961, 0.984314, 0, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_wi15m")
stretch_mode = 4

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD/MarginContainer/Health"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_vdgqb")
theme_override_styles/fill = SubResource("StyleBoxFlat_ixby1")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="Ammo" type="HBoxContainer" parent="CanvasLayer/HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20

[node name="AmmoIcon" type="TextureRect" parent="CanvasLayer/HUD/MarginContainer/Ammo"]
modulate = Color(0.733333, 1, 0, 1)
custom_minimum_size = Vector2(30, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("4_2jihu")
stretch_mode = 4

[node name="CurrentAmmo" type="Label" parent="CanvasLayer/HUD/MarginContainer/Ammo"]
layout_mode = 2
text = "11"
label_settings = SubResource("LabelSettings_tdql7")

[node name="Slash" type="Label" parent="CanvasLayer/HUD/MarginContainer/Ammo"]
layout_mode = 2
text = "/"
label_settings = SubResource("LabelSettings_xdykr")

[node name="MaxAmmo" type="Label" parent="CanvasLayer/HUD/MarginContainer/Ammo"]
layout_mode = 2
size_flags_horizontal = 0
text = "11"
label_settings = SubResource("LabelSettings_ob3lp")

[node name="PowerUpScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("6_u78d8")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PowerUpScreen"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 280
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PowerUpScreen/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "CHOOSE AN UPGRADE"
label_settings = SubResource("LabelSettings_qy4m0")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="CardOne" type="TextureButton" parent="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_hq1db")
texture_hover = ExtResource("5_kssd4")

[node name="CardTwo" type="TextureButton" parent="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_8jywo")
texture_hover = ExtResource("7_ine2k")

[node name="CardThree" type="TextureButton" parent="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_h5c5b")
texture_hover = ExtResource("9_l005a")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://addons/GoldGdt/Pawn.tscn")
spawn_path = NodePath("..")
script = ExtResource("13_dwqsj")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer/HBoxContainer/CardOne" to="CanvasLayer/PowerUpScreen" method="_on_card_one_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer/HBoxContainer/CardOne" to="CanvasLayer/PowerUpScreen" method="_on_card_one_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer/HBoxContainer/CardTwo" to="CanvasLayer/PowerUpScreen" method="_on_card_two_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer/HBoxContainer/CardTwo" to="CanvasLayer/PowerUpScreen" method="_on_card_two_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer/HBoxContainer/CardThree" to="CanvasLayer/PowerUpScreen" method="_on_card_three_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/PowerUpScreen/MarginContainer/VBoxContainer/HBoxContainer/CardThree" to="CanvasLayer/PowerUpScreen" method="_on_card_three_mouse_exited"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
